tests/bad_dataflow.out
STDOUT:

STDERR:
CFG lowering error in function foo: MalformedPhiInfo(MalformedPhiInfo { infos: [SingleMalformedPhiInfo { bb_id: BBId(5), phi_dest: ValueRef(28, 39..40, Some(VarId(2)), None), phi_var_id: Some(VarId(2)), sources: {BBId(4): Value(ValueRef(12, 124..127, Some(VarId(2)), None))}, missing_sources: {BBId(2)} }, SingleMalformedPhiInfo { bb_id: BBId(3), phi_dest: ValueRef(27, 39..40, Some(VarId(2)), None), phi_var_id: Some(VarId(2)), sources: {BBId(1): Value(ValueRef(7, 75..78, Some(VarId(2)), None)), BBId(5): Value(ValueRef(28, 39..40, Some(VarId(2)), None))}, missing_sources: {BBId(5)} }, SingleMalformedPhiInfo { bb_id: BBId(8), phi_dest: ValueRef(47, 39..40, Some(VarId(2)), None), phi_var_id: Some(VarId(2)), sources: {BBId(6): Value(ValueRef(39, 39..40, Some(VarId(2)), Some(BBId(3)))), BBId(7): Value(ValueRef(40, 39..40, Some(VarId(2)), Some(BBId(3))))}, missing_sources: {BBId(6), BBId(7)} }, SingleMalformedPhiInfo { bb_id: BBId(8), phi_dest: ValueRef(29, 50..51, Some(VarId(3)), None), phi_var_id: Some(VarId(3)), sources: {BBId(6): Value(ValueRef(17, 167..170, Some(VarId(3)), None)), BBId(7): Value(ValueRef(19, 193..196, Some(VarId(3)), None))}, missing_sources: {BBId(6)} }], malformed_assignments: [SingleMalformedAssignmentInfo { bb_id: BBId(6), dest_val: ValueRef(16, 169..170, Some(VarId(2)), None), assigned_val: Value(ValueRef(39, 39..40, Some(VarId(2)), Some(BBId(3)))), missing_sources: {} }, SingleMalformedAssignmentInfo { bb_id: BBId(6), dest_val: ValueRef(17, 167..170, Some(VarId(3)), None), assigned_val: Value(ValueRef(16, 169..170, Some(VarId(2)), None)), missing_sources: {} }, SingleMalformedAssignmentInfo { bb_id: BBId(8), dest_val: ValueRef(20, 215..216, Some(VarId(3)), None), assigned_val: Value(ValueRef(29, 50..51, Some(VarId(3)), None)), missing_sources: {} }], phi_assignments: [SingleMalformedAssignmentInfo { bb_id: BBId(6), dest_val: ValueRef(39, 39..40, Some(VarId(2)), Some(BBId(3))), assigned_val: Value(ValueRef(27, 39..40, Some(VarId(2)), None)), missing_sources: {BBId(3), BBId(5)} }, SingleMalformedAssignmentInfo { bb_id: BBId(7), dest_val: ValueRef(40, 39..40, Some(VarId(2)), Some(BBId(3))), assigned_val: Value(ValueRef(27, 39..40, Some(VarId(2)), None)), missing_sources: {BBId(3), BBId(5)} }], malformed_tails: [SingleMalformedTailInfo { bb_id: BBId(8), missing_sources: {} }], blocks: [BasicBlock { id: BBId(0), phi: [], instructions: [Assign { dest: ValueRef(0, 8..219, Some(VarId(4)), None), val: Function { name: "foo" } }, Assign { dest: ValueRef(1, 20..21, Some(VarId(0)), None), val: Param { param_index: 0 } }, Assign { dest: ValueRef(2, 27..28, Some(VarId(1)), None), val: Param { param_index: 1 } }, Assign { dest: ValueRef(3, 60..61, Some(VarId(0)), None), val: Value(ValueRef(1, 20..21, Some(VarId(0)), None)) }, Assign { dest: ValueRef(4, 62..63, None, None), val: Const(0) }, Assign { dest: ValueRef(5, 60..63, None, None), val: LtCheck { left: ValueRef(3, 60..61, Some(VarId(0)), None), right: ValueRef(4, 62..63, None, None) } }], tail: CondBranch { cond: ValueRef(5, 60..63, None, None), then_bb: BBId(1), else_bb: BBId(2) }, successors: [BBId(1), BBId(2)], predecessors: [] }, BasicBlock { id: BBId(1), phi: [], instructions: [Assign { dest: ValueRef(23, 12..15, Some(VarId(4)), Some(BBId(0))), val: Value(ValueRef(0, 8..219, Some(VarId(4)), None)) }, Assign { dest: ValueRef(22, 27..28, Some(VarId(1)), Some(BBId(0))), val: Value(ValueRef(2, 27..28, Some(VarId(1)), None)) }, Assign { dest: ValueRef(21, 20..21, Some(VarId(0)), Some(BBId(0))), val: Value(ValueRef(1, 20..21, Some(VarId(0)), None)) }, Assign { dest: ValueRef(6, 77..78, None, None), val: Const(1) }, Assign { dest: ValueRef(7, 75..78, Some(VarId(2)), None), val: Value(ValueRef(6, 77..78, None, None)) }], tail: UncondBranch { target: BBId(3) }, successors: [BBId(3)], predecessors: [BBId(0)] }, BasicBlock { id: BBId(2), phi: [], instructions: [Assign { dest: ValueRef(26, 12..15, Some(VarId(4)), Some(BBId(0))), val: Value(ValueRef(0, 8..219, Some(VarId(4)), None)) }, Assign { dest: ValueRef(25, 27..28, Some(VarId(1)), Some(BBId(0))), val: Value(ValueRef(2, 27..28, Some(VarId(1)), None)) }, Assign { dest: ValueRef(24, 20..21, Some(VarId(0)), Some(BBId(0))), val: Value(ValueRef(1, 20..21, Some(VarId(0)), None)) }, Assign { dest: ValueRef(8, 105..106, Some(VarId(0)), None), val: Value(ValueRef(24, 20..21, Some(VarId(0)), Some(BBId(0)))) }, Assign { dest: ValueRef(9, 107..108, None, None), val: Const(0) }, Assign { dest: ValueRef(10, 105..108, None, None), val: GtCheck { left: ValueRef(8, 105..106, Some(VarId(0)), None), right: ValueRef(9, 107..108, None, None) } }], tail: CondBranch { cond: ValueRef(10, 105..108, None, None), then_bb: BBId(4), else_bb: BBId(5) }, successors: [BBId(4), BBId(5)], predecessors: [BBId(0)] }, BasicBlock { id: BBId(3), phi: [PhiCfgInstruction { dest: ValueRef(27, 39..40, Some(VarId(2)), None), sources: {BBId(1): Value(ValueRef(7, 75..78, Some(VarId(2)), None)), BBId(5): Value(ValueRef(28, 39..40, Some(VarId(2)), None))}, var_id: Some(VarId(2)) }, PhiCfgInstruction { dest: ValueRef(30, 20..21, Some(VarId(0)), None), sources: {BBId(1): Value(ValueRef(21, 20..21, Some(VarId(0)), Some(BBId(0)))), BBId(5): Value(ValueRef(36, 20..21, Some(VarId(0)), None))}, var_id: Some(VarId(0)) }, PhiCfgInstruction { dest: ValueRef(31, 27..28, Some(VarId(1)), None), sources: {BBId(1): Value(ValueRef(22, 27..28, Some(VarId(1)), Some(BBId(0)))), BBId(5): Value(ValueRef(37, 27..28, Some(VarId(1)), None))}, var_id: Some(VarId(1)) }, PhiCfgInstruction { dest: ValueRef(32, 12..15, Some(VarId(4)), None), sources: {BBId(1): Value(ValueRef(23, 12..15, Some(VarId(4)), Some(BBId(0)))), BBId(5): Value(ValueRef(38, 12..15, Some(VarId(4)), None))}, var_id: Some(VarId(4)) }], instructions: [Assign { dest: ValueRef(13, 152..153, Some(VarId(1)), None), val: Value(ValueRef(31, 27..28, Some(VarId(1)), None)) }, Assign { dest: ValueRef(14, 154..155, None, None), val: Const(0) }, Assign { dest: ValueRef(15, 152..155, None, None), val: GtCheck { left: ValueRef(13, 152..153, Some(VarId(1)), None), right: ValueRef(14, 154..155, None, None) } }], tail: CondBranch { cond: ValueRef(15, 152..155, None, None), then_bb: BBId(6), else_bb: BBId(7) }, successors: [BBId(6), BBId(7)], predecessors: [BBId(1), BBId(5)] }, BasicBlock { id: BBId(4), phi: [], instructions: [Assign { dest: ValueRef(35, 12..15, Some(VarId(4)), Some(BBId(2))), val: Value(ValueRef(26, 12..15, Some(VarId(4)), Some(BBId(0)))) }, Assign { dest: ValueRef(34, 27..28, Some(VarId(1)), Some(BBId(2))), val: Value(ValueRef(25, 27..28, Some(VarId(1)), Some(BBId(0)))) }, Assign { dest: ValueRef(33, 20..21, Some(VarId(0)), Some(BBId(2))), val: Value(ValueRef(24, 20..21, Some(VarId(0)), Some(BBId(0)))) }, Assign { dest: ValueRef(11, 126..127, None, None), val: Const(2) }, Assign { dest: ValueRef(12, 124..127, Some(VarId(2)), None), val: Value(ValueRef(11, 126..127, None, None)) }], tail: UncondBranch { target: BBId(5) }, successors: [BBId(5)], predecessors: [BBId(2)] }, BasicBlock { id: BBId(5), phi: [PhiCfgInstruction { dest: ValueRef(28, 39..40, Some(VarId(2)), None), sources: {BBId(4): Value(ValueRef(12, 124..127, Some(VarId(2)), None))}, var_id: Some(VarId(2)) }, PhiCfgInstruction { dest: ValueRef(36, 20..21, Some(VarId(0)), None), sources: {BBId(2): Value(ValueRef(24, 20..21, Some(VarId(0)), Some(BBId(0)))), BBId(4): Value(ValueRef(33, 20..21, Some(VarId(0)), Some(BBId(2))))}, var_id: Some(VarId(0)) }, PhiCfgInstruction { dest: ValueRef(37, 27..28, Some(VarId(1)), None), sources: {BBId(2): Value(ValueRef(25, 27..28, Some(VarId(1)), Some(BBId(0)))), BBId(4): Value(ValueRef(34, 27..28, Some(VarId(1)), Some(BBId(2))))}, var_id: Some(VarId(1)) }, PhiCfgInstruction { dest: ValueRef(38, 12..15, Some(VarId(4)), None), sources: {BBId(2): Value(ValueRef(26, 12..15, Some(VarId(4)), Some(BBId(0)))), BBId(4): Value(ValueRef(35, 12..15, Some(VarId(4)), Some(BBId(2))))}, var_id: Some(VarId(4)) }], instructions: [], tail: UncondBranch { target: BBId(3) }, successors: [BBId(3)], predecessors: [BBId(2), BBId(4)] }, BasicBlock { id: BBId(6), phi: [], instructions: [Assign { dest: ValueRef(43, 12..15, Some(VarId(4)), Some(BBId(3))), val: Value(ValueRef(32, 12..15, Some(VarId(4)), None)) }, Assign { dest: ValueRef(42, 27..28, Some(VarId(1)), Some(BBId(3))), val: Value(ValueRef(31, 27..28, Some(VarId(1)), None)) }, Assign { dest: ValueRef(41, 20..21, Some(VarId(0)), Some(BBId(3))), val: Value(ValueRef(30, 20..21, Some(VarId(0)), None)) }, Assign { dest: ValueRef(39, 39..40, Some(VarId(2)), Some(BBId(3))), val: Value(ValueRef(27, 39..40, Some(VarId(2)), None)) }, Assign { dest: ValueRef(16, 169..170, Some(VarId(2)), None), val: Value(ValueRef(39, 39..40, Some(VarId(2)), Some(BBId(3)))) }, Assign { dest: ValueRef(17, 167..170, Some(VarId(3)), None), val: Value(ValueRef(16, 169..170, Some(VarId(2)), None)) }], tail: UncondBranch { target: BBId(8) }, successors: [BBId(8)], predecessors: [BBId(3)] }, BasicBlock { id: BBId(7), phi: [], instructions: [Assign { dest: ValueRef(46, 12..15, Some(VarId(4)), Some(BBId(3))), val: Value(ValueRef(32, 12..15, Some(VarId(4)), None)) }, Assign { dest: ValueRef(45, 27..28, Some(VarId(1)), Some(BBId(3))), val: Value(ValueRef(31, 27..28, Some(VarId(1)), None)) }, Assign { dest: ValueRef(44, 20..21, Some(VarId(0)), Some(BBId(3))), val: Value(ValueRef(30, 20..21, Some(VarId(0)), None)) }, Assign { dest: ValueRef(40, 39..40, Some(VarId(2)), Some(BBId(3))), val: Value(ValueRef(27, 39..40, Some(VarId(2)), None)) }, Assign { dest: ValueRef(18, 195..196, None, None), val: Const(0) }, Assign { dest: ValueRef(19, 193..196, Some(VarId(3)), None), val: Value(ValueRef(18, 195..196, None, None)) }], tail: UncondBranch { target: BBId(8) }, successors: [BBId(8)], predecessors: [BBId(3)] }, BasicBlock { id: BBId(8), phi: [PhiCfgInstruction { dest: ValueRef(29, 50..51, Some(VarId(3)), None), sources: {BBId(6): Value(ValueRef(17, 167..170, Some(VarId(3)), None)), BBId(7): Value(ValueRef(19, 193..196, Some(VarId(3)), None))}, var_id: Some(VarId(3)) }, PhiCfgInstruction { dest: ValueRef(47, 39..40, Some(VarId(2)), None), sources: {BBId(6): Value(ValueRef(39, 39..40, Some(VarId(2)), Some(BBId(3)))), BBId(7): Value(ValueRef(40, 39..40, Some(VarId(2)), Some(BBId(3))))}, var_id: Some(VarId(2)) }, PhiCfgInstruction { dest: ValueRef(48, 20..21, Some(VarId(0)), None), sources: {BBId(6): Value(ValueRef(41, 20..21, Some(VarId(0)), Some(BBId(3)))), BBId(7): Value(ValueRef(44, 20..21, Some(VarId(0)), Some(BBId(3))))}, var_id: Some(VarId(0)) }, PhiCfgInstruction { dest: ValueRef(49, 27..28, Some(VarId(1)), None), sources: {BBId(6): Value(ValueRef(42, 27..28, Some(VarId(1)), Some(BBId(3)))), BBId(7): Value(ValueRef(45, 27..28, Some(VarId(1)), Some(BBId(3))))}, var_id: Some(VarId(1)) }, PhiCfgInstruction { dest: ValueRef(50, 12..15, Some(VarId(4)), None), sources: {BBId(6): Value(ValueRef(43, 12..15, Some(VarId(4)), Some(BBId(3)))), BBId(7): Value(ValueRef(46, 12..15, Some(VarId(4)), Some(BBId(3))))}, var_id: Some(VarId(4)) }], instructions: [Assign { dest: ValueRef(20, 215..216, Some(VarId(3)), None), val: Value(ValueRef(29, 50..51, Some(VarId(3)), None)) }], tail: Return { value: Some(ValueRef(20, 215..216, Some(VarId(3)), None)) }, successors: [], predecessors: [BBId(6), BBId(7)] }] })
error: Use before initialization detected during CFG lowering
   ┌─ tests/bad_dataflow.c:13:11
   │
 3 │     int x;
   │         - Variable declaration site
   ·
13 │         y=x;
   │           ^ value not valid due to prior malformed phi
   │
   = note: this means that there are assignments to this variable, but not on all possible code paths

error: Use before initialization detected during CFG lowering
   ┌─ tests/bad_dataflow.c:13:9
   │
13 │         y=x;
   │         ^^^
   │         │ │
   │         │ Variable declaration site
   │         value not valid due to prior malformed phi
   │
   = note: this means that there are assignments to this variable, but not on all possible code paths

error: Use before initialization detected during CFG lowering
   ┌─ tests/bad_dataflow.c:17:12
   │
 4 │     int y;
   │         - Variable declaration site
   ·
17 │     return y;
   │            ^ value not valid due to prior malformed phi
   │
   = note: this means that there are assignments to this variable, but not on all possible code paths

---
digraph MalformedPhiInfo {
  BB0 [label="BB0:\n    %0 = function foo (foo)\n    %1 = param[0] (a)\n    %2 = param[1] (b)\n    %3 = %1 (a)\n    %4 = const 0\n    %5 = lt %3, %4\n    br_cond %5 ? BB1 : BB2;\n"];
  BB1 [label="BB1:\n    %23 = %0 (foo)\n    %22 = %2 (b)\n    %21 = %1 (a)\n    %6 = const 1\n    %7 = %6 (x)\n    br BB3\n"];
  BB2 [label="BB2:\n    %26 = %0 (foo)\n    %25 = %2 (b)\n    %24 = %1 (a)\n    %8 = %24 (a)\n    %9 = const 0\n    %10 = gt %8, %9\n    br_cond %10 ? BB4 : BB5;\n"];
  BB3 [label="BB3:\n    %27 = Φ(%7@BB1, %28@BB5 [malformed: missing from BBs [5]]) (x)\n    %30 = Φ(%21@BB1, %36@BB5) (a)\n    %31 = Φ(%22@BB1, %37@BB5) (b)\n    %32 = Φ(%23@BB1, %38@BB5) (foo)\n    %13 = %31 (b)\n    %14 = const 0\n    %15 = gt %13, %14\n    br_cond %15 ? BB6 : BB7;\n"];
  BB4 [label="BB4:\n    %35 = %26 (foo)\n    %34 = %25 (b)\n    %33 = %24 (a)\n    %11 = const 2\n    %12 = %11 (x)\n    br BB5\n"];
  BB5 [label="BB5:\n    %28 = Φ(%12@BB4 [malformed: missing from BBs [2]]) (x)\n    %36 = Φ(%24@BB2, %33@BB4) (a)\n    %37 = Φ(%25@BB2, %34@BB4) (b)\n    %38 = Φ(%26@BB2, %35@BB4) (foo)\n    br BB3\n"];
  BB6 [label="BB6:\n    %43 = %32 (foo)\n    %42 = %31 (b)\n    %41 = %30 (a)\n    %39 = %27 [malformed: missing from BBs [3]] (x)\n    %16 = %39 [malformed: missing from BBs []] (x)\n    %17 = %16 [malformed: missing from BBs []] (y)\n    br BB8\n"];
  BB7 [label="BB7:\n    %46 = %32 (foo)\n    %45 = %31 (b)\n    %44 = %30 (a)\n    %40 = %27 [malformed: missing from BBs [3]] (x)\n    %18 = const 0\n    %19 = %18 (y)\n    br BB8\n"];
  BB8 [label="BB8:\n    %29 = Φ(%17@BB6, %19@BB7 [malformed: missing from BBs [6]]) (y)\n    %47 = Φ(%39@BB6, %40@BB7 [malformed: missing from BBs [6, 7]]) (x)\n    %48 = Φ(%41@BB6, %44@BB7) (a)\n    %49 = Φ(%42@BB6, %45@BB7) (b)\n    %50 = Φ(%43@BB6, %46@BB7) (foo)\n    %20 = %29 [malformed: missing from BBs []] (y)\n    return %20\n"];
  BB0 -> BB1;
  BB0 -> BB2;
  BB1 -> BB3;
  BB2 -> BB4;
  BB2 -> BB5 [label="missing vars: x",fontcolor=red];
  BB3 -> BB6 [label="missing vars: x",fontcolor=red];
  BB3 -> BB7 [label="missing vars: x",fontcolor=red];
  BB4 -> BB5;
  BB5 -> BB3 [label="missing vars: x",fontcolor=red];
  BB6 -> BB8 [label="missing vars: x, y",fontcolor=red];
  BB7 -> BB8 [label="missing vars: x",fontcolor=red];
}

Error: CFG lowering failed
